fix: change gap from flexbox to margin -few color vars fixed

--- a/src/css/Form.module.css
+++ b/src/css/Form.module.css
@@ -1,14 +1,24 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 22px
+
+  /* gap: 22px */
+}
+
+.form > * {
+  margin: 11px 0;
 }
 
 .label {
   display: flex;
   flex-direction: column;
   font-size: 14px;
-  gap: 4px
+
+  /* gap: 4px */
+}
+
+.label > * {
+  margin: 2px 0;
 }
 
 .input {
@@ -23,10 +33,11 @@
 
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
   border-radius: 6px;
+  padding: 12px;
 }
 
 .input:focus {
-  border: 1px solid black;
+  border: 1px solid var(--color-secondary);
 }
 
 .input[type=text] {
@@ -38,7 +49,7 @@
   height: 38px;
   background-color: black;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  color: white;
+  color: var(--color-primary);
   font-size: 14px;
   line-height: 20px;
   font-weight: 500;
@@ -55,7 +66,7 @@
 }
 
 .button:hover {
-  background-color: hsl(220, 90%, 50%);
+  background-color: var(--color-primary-hover);
 }
 
 .button:active {
