--- a/src/css/global.css
+++ b/src/css/global.css
@@ -2,13 +2,23 @@
 @import './inter.css';
 
 :root {
-  --font-system: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  --font-system:
+    -apple-system,
+    blinkmacsystemfont,
+    segoe ui,
+    roboto,
+    oxygen,
+    ubuntu,
+    cantarell,
+    fira sans,
+    droid sans,
+    helvetica neue,
+    sans-serif;
   --font-body: 'Inter', var(--font-system), sans-serif;
-
   --color-primary: hsl(0, 0%, 100%);
   --color-secondary: hsl(0, 100%, 0%);
   --color-tertiary: hsl(217, 19%, 27%);
+  --color-primary-hover: hsl(240, 100%, 50%);
 }
 
 body {
