--- a/src/css/index.module.css
+++ b/src/css/index.module.css
@@ -3,7 +3,12 @@
   padding: 48px 96px;
   display: flex;
   flex-direction: column;
-  gap: 24px
+
+  /* gap: 24px */
+}
+
+.text-wrapper > * {
+  margin: 12px 0;
 }
 
 .image-wrapper {
